--- a/nucleo-f3-144-rfidreadwrite.ioc
+++ b/nucleo-f3-144-rfidreadwrite.ioc
@@ -9,31 +9,37 @@ Mcu.Family=STM32F3
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=RTC
-Mcu.IP3=SYS
-Mcu.IP4=USART3
-Mcu.IP5=USB
-Mcu.IPNb=6
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=USART3
+Mcu.IP6=USB
+Mcu.IP7=USB_DEVICE
+Mcu.IPNb=8
 Mcu.Name=STM32F303Z(D-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB3
-Mcu.Pin15=PB7
-Mcu.Pin16=VP_RTC_VS_RTC_Activate
-Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin10=PG7
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
+Mcu.Pin18=PB7
+Mcu.Pin19=VP_RTC_VS_RTC_Activate
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PF0-OSC_IN
-Mcu.Pin4=PB0
-Mcu.Pin5=PB14
-Mcu.Pin6=PD8
-Mcu.Pin7=PD9
-Mcu.Pin8=PG6
-Mcu.Pin9=PG7
-Mcu.PinsNb=18
+Mcu.Pin4=PA0
+Mcu.Pin5=PB0
+Mcu.Pin6=PB14
+Mcu.Pin7=PD8
+Mcu.Pin8=PD9
+Mcu.Pin9=PG6
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303ZETx
@@ -49,8 +55,12 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
-NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=SP1_SS_RC552
+PA0.Locked=true
+PA0.Signal=GPIO_Output
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=USB_DM
 PA11.Locked=true
@@ -64,12 +74,10 @@ PA12.Signal=USB_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
-PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=TCK
 PA14.Locked=true
-PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
@@ -80,9 +88,20 @@ PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=SWO
+PB3.GPIO_Label=SP1_SCK_RC552
 PB3.Locked=true
-PB3.Signal=SYS_JTDO-TRACESWO
+PB3.Mode=Full_Duplex_Master
+PB3.Signal=SPI1_SCK
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=SP1_MISO_RC552
+PB4.Locked=true
+PB4.Mode=Full_Duplex_Master
+PB4.Signal=SPI1_MISO
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=SP1_MOSI_RC552
+PB5.Locked=true
+PB5.Mode=Full_Duplex_Master
+PB5.Signal=SPI1_MOSI
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
@@ -196,12 +215,25 @@ RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.CalculateBaudRate=2.25 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.VirtualMode=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=NUCLEO-F303ZE
 boardIOC=true
 isbadioc=false
