--- a/nucleo-f3-144-rfidreadwrite.ioc
+++ b/nucleo-f3-144-rfidreadwrite.ioc
@@ -58,7 +58,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=SP1_SS_RC552
+PA0.GPIO_Label=SP1_NSS_RC552
 PA0.Locked=true
 PA0.Signal=GPIO_Output
 PA11.GPIOParameters=GPIO_Label
